<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clEditReminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jet"
    tools:context=".fragments.EditReminderFragment">

    <View
        android:id="@+id/vTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/silver"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/btnColorPicker"
        app:layout_constraintStart_toStartOf="@+id/btnColorPicker"
        app:layout_constraintTop_toBottomOf="@+id/btnColorPicker" />

    <View
        android:id="@+id/vHeader"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/black"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/empty"
        android:contentDescription="@string/btn_save_description"
        android:cropToPadding="true"
        android:elevation="4dp"
        android:padding="5dp"
        android:src="@drawable/outline_save_50"
        app:layout_constraintBottom_toBottomOf="@+id/vHeader"
        app:layout_constraintEnd_toEndOf="@+id/vHeader"
        app:layout_constraintTop_toTopOf="@+id/vHeader" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="10dp"
        android:shadowColor="@color/black"
        android:text="@string/edit_notification_page_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vHeader"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="@+id/vHeader"
        app:layout_constraintTop_toTopOf="@+id/vHeader" />

    <ImageButton
        android:id="@+id/btnColorPicker"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/accent"
        android:contentDescription="@string/btn_pick_colour_description"
        android:elevation="2dp"
        android:src="@drawable/outline_keyboard_arrow_up_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vHeader" />

    <EditText
        android:id="@+id/iTxtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/gray"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/i_txt_notification_title"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vTitle"
        app:layout_constraintEnd_toEndOf="@+id/vTitle"
        app:layout_constraintStart_toStartOf="@+id/vTitle"
        app:layout_constraintTop_toTopOf="@+id/vTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_corners"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/btnColorPicker"
        app:layout_constraintStart_toStartOf="@+id/btnColorPicker"
        app:layout_constraintTop_toBottomOf="@+id/vTitle">

        <EditText
            android:id="@+id/iTxtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/gray"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/i_txt_notification_description"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>