<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:elevation="4dp"
        android:padding="10dp"
        android:shadowColor="@color/black"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNotifications"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/jet"
        android:clipToPadding="false"
        android:paddingBottom="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fBtnAddNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/btn_add_description"
        android:focusable="true"
        app:backgroundTint="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/baseline_add_50" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fBtnToCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/btn_calendar_description"
        android:focusable="true"
        app:backgroundTint="@color/accent"
        app:layout_constraintBottom_toTopOf="@+id/fBtnAddNotification"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35dp"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/outline_calendar_month_50" />

</androidx.constraintlayout.widget.ConstraintLayout>