<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clAddNotification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jet"
    tools:context=".fragments.NewReminderFragment">

    <View
        android:id="@+id/vTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/silver"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/btnColorPicker"
        app:layout_constraintStart_toStartOf="@+id/btnColorPicker"
        app:layout_constraintTop_toBottomOf="@+id/btnColorPicker" />

    <View
        android:id="@+id/vHeader"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/black"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/empty"
        android:contentDescription="@string/btn_save_description"
        android:cropToPadding="true"
        android:elevation="4dp"
        android:padding="5dp"
        android:src="@drawable/outline_save_50"
        app:layout_constraintBottom_toBottomOf="@+id/vHeader"
        app:layout_constraintEnd_toEndOf="@+id/vHeader"
        app:layout_constraintTop_toTopOf="@+id/vHeader" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="10dp"
        android:shadowColor="@color/black"
        android:text="@string/add_page_title1"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vHeader"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="@+id/vHeader"
        app:layout_constraintTop_toTopOf="@+id/vHeader" />

    <ImageButton
        android:id="@+id/btnColorPicker"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/accent"
        android:contentDescription="@string/btn_pick_colour_description"
        android:elevation="2dp"
        android:src="@drawable/outline_keyboard_arrow_up_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vHeader"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/iTxtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/i_txt_notification_title"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vTitle"
        app:layout_constraintEnd_toEndOf="@+id/vTitle"
        app:layout_constraintStart_toStartOf="@+id/vTitle"
        app:layout_constraintTop_toTopOf="@+id/vTitle"
        tools:ignore="Autofill" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_corners"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="@+id/btnColorPicker"
        app:layout_constraintStart_toStartOf="@+id/btnColorPicker"
        app:layout_constraintTop_toBottomOf="@+id/vTitle">

        <EditText
            android:id="@+id/iTxtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/i_txt_notification_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/vSelection"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corners"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clDescription" />

    <Switch
        android:id="@+id/swSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:switchMinWidth="70dp"
        android:thumb="@drawable/custom_thumb"
        android:track="@drawable/custom_track"
        app:layout_constraintBottom_toBottomOf="@+id/vSelection"
        app:layout_constraintEnd_toEndOf="@+id/vSelection"
        app:layout_constraintStart_toStartOf="@+id/vSelection"
        app:layout_constraintTop_toTopOf="@+id/vSelection"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:elevation="2dp"
        android:text="@string/add_reminder_reminder"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/vSelection"
        app:layout_constraintStart_toStartOf="@+id/vSelection"
        app:layout_constraintTop_toTopOf="@+id/vSelection" />

    <TextView
        android:id="@+id/txtEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:elevation="2dp"
        android:text="@string/add_reminder_event"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/vSelection"
        app:layout_constraintEnd_toEndOf="@+id/vSelection"
        app:layout_constraintTop_toTopOf="@+id/vSelection" />

    <View
        android:id="@+id/vContainer1"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.5"
        android:background="@drawable/rounded_corners"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vSelection" />

    <View
        android:id="@+id/vLine1"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:alpha="0.5"
        android:background="@color/silver"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/vContainer1"
        app:layout_constraintEnd_toEndOf="@+id/vContainer1"
        app:layout_constraintStart_toStartOf="@+id/vContainer1"
        app:layout_constraintTop_toTopOf="@+id/vContainer1"
        app:layout_constraintVertical_bias="0.666666" />

    <View
        android:id="@+id/vLine3"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:alpha="0.5"
        android:background="@color/silver"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/vContainer1"
        app:layout_constraintEnd_toEndOf="@+id/vContainer1"
        app:layout_constraintStart_toStartOf="@+id/vContainer1"
        app:layout_constraintTop_toTopOf="@+id/vContainer1"
        app:layout_constraintVertical_bias="0.333333" />

    <TextView
        android:id="@+id/txtStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:text="@string/add_reminder_start_date"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/vLine1"
        app:layout_constraintStart_toStartOf="@+id/vContainer1"
        app:layout_constraintTop_toBottomOf="@+id/vLine3" />

    <TextView
        android:id="@+id/txtEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:text="@string/add_reminder_end_date"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vContainer1"
        app:layout_constraintStart_toStartOf="@+id/vContainer1"
        app:layout_constraintTop_toBottomOf="@+id/vLine1" />

    <TextView
        android:id="@+id/txtStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:elevation="2dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/vLine1"
        app:layout_constraintEnd_toEndOf="@+id/vContainer1"
        app:layout_constraintStart_toStartOf="@+id/vContainer1"
        app:layout_constraintTop_toBottomOf="@+id/vLine3"
        tools:text="txtStartDate" />

    <TextView
        android:id="@+id/txtEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:elevation="2dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/vContainer1"
        app:layout_constraintEnd_toEndOf="@+id/vContainer1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/vContainer1"
        app:layout_constraintTop_toBottomOf="@+id/vLine1"
        tools:text="txtEndDate" />

    <ImageButton
        android:id="@+id/btnStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:background="@color/empty"
        android:contentDescription="@string/add_reminder_select_start_date"
        android:elevation="2dp"
        android:src="@drawable/baseline_edit_square_30"
        app:layout_constraintBottom_toTopOf="@+id/vLine1"
        app:layout_constraintEnd_toEndOf="@+id/vContainer1"
        app:layout_constraintTop_toBottomOf="@+id/vLine3"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:background="@color/empty"
        android:contentDescription="@string/add_reminder_select_end_date"
        android:elevation="2dp"
        android:src="@drawable/baseline_edit_square_30"
        app:layout_constraintBottom_toBottomOf="@+id/vContainer1"
        app:layout_constraintEnd_toEndOf="@+id/vContainer1"
        app:layout_constraintTop_toBottomOf="@+id/vLine1"
        tools:ignore="TouchTargetSizeCheck" />


    <View
        android:id="@+id/vContainer2"
        android:layout_width="0dp"
        android:layout_height="86dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.5"
        android:background="@drawable/rounded_corners"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vContainer1" />

    <View
        android:id="@+id/vLine2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:alpha="0.5"
        android:background="@color/silver"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/vContainer2"
        app:layout_constraintEnd_toEndOf="@+id/vContainer2"
        app:layout_constraintStart_toStartOf="@+id/vContainer2"
        app:layout_constraintTop_toTopOf="@+id/vContainer2" />

    <TextView
        android:id="@+id/txtRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:text="@string/add_reminder_repeat"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/vLine2"
        app:layout_constraintStart_toStartOf="@+id/vContainer2"
        app:layout_constraintTop_toTopOf="@+id/vContainer2" />

    <TextView
        android:id="@+id/txtEventReminderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:text="@string/add_reminder_notification"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vContainer2"
        app:layout_constraintStart_toStartOf="@+id/vContainer2"
        app:layout_constraintTop_toBottomOf="@+id/vLine2" />

    <TextView
        android:id="@+id/txtRepeatText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/vLine2"
        app:layout_constraintEnd_toStartOf="@+id/btnRepeat"
        app:layout_constraintStart_toEndOf="@+id/txtRepeat"
        app:layout_constraintTop_toTopOf="@+id/vContainer2"
        tools:text="txtRepeat" />

    <TextView
        android:id="@+id/txtEventReminderTimeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/vContainer2"
        app:layout_constraintEnd_toStartOf="@+id/btnEventReminderTime"
        app:layout_constraintStart_toEndOf="@+id/txtEventReminderTime"
        app:layout_constraintTop_toBottomOf="@+id/vLine2"
        tools:text="txtNotification" />

    <ImageButton
        android:id="@+id/btnRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:background="@color/empty"
        android:contentDescription="@string/add_reminder_select_repeat"
        android:elevation="2dp"
        android:src="@drawable/baseline_edit_square_30"
        app:layout_constraintBottom_toTopOf="@+id/vLine2"
        app:layout_constraintEnd_toEndOf="@+id/vContainer2"
        app:layout_constraintTop_toTopOf="@+id/vContainer2"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnEventReminderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:background="@color/empty"
        android:contentDescription="@string/add_reminder_select_notification"
        android:elevation="2dp"
        android:src="@drawable/baseline_edit_square_30"
        app:layout_constraintBottom_toBottomOf="@+id/vContainer2"
        app:layout_constraintEnd_toEndOf="@+id/vContainer2"
        app:layout_constraintTop_toBottomOf="@+id/vLine2"
        tools:ignore="TouchTargetSizeCheck" />

    <Switch
        android:id="@+id/swIncludesTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:thumb="@drawable/custom_thumb_color_switch"
        android:track="@drawable/custom_track"
        app:layout_constraintBottom_toTopOf="@+id/vLine3"
        app:layout_constraintEnd_toEndOf="@+id/vContainer1"
        app:layout_constraintTop_toTopOf="@+id/vContainer1"
        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

    <View
        android:id="@+id/vClockIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:alpha="0.5"
        android:background="@drawable/baseline_access_time_30"
        android:elevation="2dp"
        app:layout_constraintBottom_toTopOf="@+id/vLine3"
        app:layout_constraintStart_toStartOf="@+id/vContainer1"
        app:layout_constraintTop_toTopOf="@+id/vContainer1" />

</androidx.constraintlayout.widget.ConstraintLayout>